--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@emotion/css": "^11.7.1",
+    "@graphprotocol/graph-cli": "^0.26.0",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
     "@walletconnect/web3-provider": "^1.7.1",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
     "easymde": "^2.16.1",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
